--- a/package.json
+++ b/package.json
@@ -30,25 +30,28 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
-    "@types/jest": "^28.1.6",
-    "@types/mocha": "^10.0.7",
-    "dotenv": "16.0.3",
-    "dotenv-esbuild": "1.1.0",
-    "dotenv-cli": "7.2.1",
-    "dotenv-webpack": "8.0.1",
     "@graphql-codegen/typescript": "4.0.1",
     "@graphql-codegen/typescript-operations": "4.0.1",
     "@graphql-codegen/typescript-react-apollo": "4.1.0",
     "@graphql-codegen/typescript-resolvers": "2.7.10",
+    "@types/jest": "^28.1.6",
+    "@types/mocha": "^10.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/supertest": "^6.0.3",
+    "dotenv": "16.0.3",
+    "dotenv-cli": "7.2.1",
+    "dotenv-esbuild": "1.1.0",
+    "dotenv-webpack": "8.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "jest": "^26.6.3",
+    "jest": "^29.0.0",
     "jest-environment-jsdom": "^24.0.0",
     "jest-environment-jsdom-fourteen": "^1.0.1",
+    "mongodb-memory-server": "^10.1.4",
     "postcss": "^8",
+    "supertest": "^7.1.0",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.2",
     "typescript": "^5.5.4"
