--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "start": "yarn generate && next start",
     "lint": "next lint",
     "test:watch": "jest --watchAll",
-    "test": "yarn generate && jest",
+    "test": "jest",
     "generate": "graphql-codegen --config ./codegen.yml"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.6",
     "@apollo/subgraph": "^2.8.4",
     "@apollo/utils.keyvaluecache": "^3.1.0",
     "@types/graphql-upload": "^16.0.7",
     "apollo-server-cloud-functions": "^3.13.0",
     "cloudinary": "^2.4.0",
-    "graphql": "^16.9.0",
+    "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
     "graphql-tools": "^9.0.1",
     "graphql-upload": "^16.0.2",
@@ -34,7 +35,7 @@
     "@graphql-codegen/typescript-operations": "4.0.1",
     "@graphql-codegen/typescript-react-apollo": "4.1.0",
     "@graphql-codegen/typescript-resolvers": "2.7.10",
-    "@types/jest": "^28.1.6",
+    "@types/jest": "^28.1.8",
     "@types/mocha": "^10.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -46,14 +47,14 @@
     "dotenv-webpack": "8.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "jest": "^29.0.0",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^24.0.0",
     "jest-environment-jsdom-fourteen": "^1.0.1",
     "mongodb-memory-server": "^10.1.4",
     "postcss": "^8",
     "supertest": "^7.1.0",
     "tailwindcss": "^3.4.1",
-    "ts-jest": "^29.1.2",
-    "typescript": "^5.5.4"
+    "ts-jest": "^29.3.1",
+    "typescript": "^5.8.3"
   }
 }
