--- a/package.json
+++ b/package.json
@@ -17,17 +17,22 @@
     "@apollo/utils.keyvaluecache": "^3.1.0",
     "@types/graphql-upload": "^16.0.7",
     "apollo-server-cloud-functions": "^3.13.0",
+    "axios": "^1.8.4",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "cloudinary": "^2.4.0",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
     "graphql-tools": "^9.0.1",
     "graphql-upload": "^16.0.2",
     "jsdom": "^24.1.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.4",
     "next": "14.0.4",
     "next-cloudinary": "^6.13.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
@@ -36,6 +41,7 @@
     "@graphql-codegen/typescript-react-apollo": "4.1.0",
     "@graphql-codegen/typescript-resolvers": "2.7.10",
     "@types/jest": "^28.1.8",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/mocha": "^10.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
