--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@apollo/client": "^3.13.6",
     "@apollo/subgraph": "^2.8.4",
     "@apollo/utils.keyvaluecache": "^3.1.0",
+    "@shadcn/ui": "^0.0.4",
     "@types/graphql-upload": "^16.0.7",
     "apollo-server-cloud-functions": "^3.13.0",
     "axios": "^1.8.4",
@@ -47,7 +48,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/supertest": "^6.0.3",
-    "dotenv": "16.0.3",
+    "dotenv": "^16.0.3",
     "dotenv-cli": "7.2.1",
     "dotenv-esbuild": "1.1.0",
     "dotenv-webpack": "8.0.1",
